--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url(/images/bg.jpg);
+    background-image: url(./images/bg.jpg);
     background-size: cover;
     margin-bottom:0px;
 }
